hphp/hack/test/typecheck/defined/assign_in_conditional.php.exp
File "assign_in_conditional.php", line 7, characters 14-15:
Variable $x is undefined, or not always defined (did you mean $b instead?) (Naming[2050])
